service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-service
spec:
  type: NodePort
  selector:
    app: demo-devops-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
